# ppl

./: .gitignore  LICENSE  cabal.project.local  compiler.cabal  readme.md  stack.yaml  test.ppl
app/: Main.hs  Parser.hs  Parser2.hs  Representation.hs  Sample.hs
old/: Parser2.hs
src/: ApproximateIntegration.hs  Chart.hs  DistributionSampler.hs  Evaluate.hs  Infer.hs  Interpret.hs  MaximumAPosteriori.hs  Mean.hs  Optimizer.hs  Parser.hs  Query.hs  Representation.hs  Runtime.hs  Sample.hs  Spn.hs  Validate.hs
src/Debug/: Extended.hs
src/Parser/: Expr.hs  Program.hs  Query.hs  String.hs
test/: ApproximateIntegrationTest.hs  Assert.hs  DimProbTest.hs  InferTest.hs  InterpretTest.hs  Main.hs  MapTest.hs  OptimizeTest.hs  ParserTest.hs  Problems.hs  QueryTest.hs  SampleTest.hs  Shorter.hs
