cabal-version:      3.4
-- The name of the package.
name:               compiler
-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
-- A short (one-line) description of the package.
-- synopsis:
-- A longer description of the package.
-- description:
license:            MIT
license-file:       LICENSE
author:             TomTroppmann
maintainer:         troppmann.tom@gmail.com
-- A copyright notice.
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library lib
    import:           warnings
    exposed-modules:  ApproximateIntegration,
                      Debug.Extended,
                      DistributionSampler,
                      Evaluate,
                      Interpret, 
                      Mean,
                      Parser, 
                      Representation, 
                      Sample, 
                      Spn
    hs-source-dirs:   src 
    build-depends:    base ^>=4.17.2.1, containers, random, statistics, MonadRandom
    default-language: GHC2021

executable compiler
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1, 
                      containers, 
                      random, 
                      statistics, 
                      MonadRandom, 
                      compiler:lib
    hs-source-dirs:   app
    default-language: GHC2021

test-suite tests
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    other-modules:    ApproximateIntegrationTest,
                      Assert,
                      Problems,
                      Shorter,
                      SampleTest,
                      ParserTest,
                      InterpretTest
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1, 
                      tasty,
                      tasty-hunit,
                      HUnit-approx,
                      tasty-expected-failure,
                      compiler:lib
    default-language: GHC2021